log/build_2024-01-24_14-08-29/semaforo/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/aoki/Desktop/ROS_msg/install/semaforo/lib/python3.10/site-packages/semaforo/publisher_member_function.py", line 38
    msg.
        ^
SyntaxError: invalid syntax

